--- a/.rvmrc
+++ b/.rvmrc
@@ -4,7 +4,7 @@
 # development environment upon cd'ing into the directory
 
 # First we specify our desired <ruby>[@<gemset>], the @gemset name is optional,
-environment_id="jruby-1.7.2@adaptor-openstack"
+environment_id="ruby-1.9.3-p0@adaptor-template"
 
 # Uncomment the following lines if you want to verify rvm version per project
 # rvmrc_rvm_version="1.14.5 (stable)" # 1.10.1 seams as a safe start
@@ -53,3 +53,4 @@ fi
 # then
 #   bundle install | GREP_OPTIONS= \grep -vE '^Using|Your bundle is complete'
 # fi
+alias cap='rvm ruby-1.9.3-p0@global do cap'
